SERVER-28810 Re-try range deletions